# Laboratorio

./: .gitignore  CMakeLists.txt  Lez 3 Quadrato.cpp
Algoritmi e Strutture Dati/Esercizi Laboratorio/Lab4/Es1/: 1_ABR_init.cpp  inputTest.txt
Algoritmi e Strutture Dati/Esercizi Laboratorio/Lab6/Es1/: 1_Hash.cpp
Algoritmi e Strutture Dati/Heap Structure/: Heap_Class.cpp
Algoritmi e Strutture Dati/Teoria/Heap Structure/: HeapSort.cpp  Heap_Class.cpp  Heap_Class.h
ExamTest/1_2022/: Exam1.cpp
ExamTest/1_2026/: Exam1.cpp
ExamTest/1_2026/include/: compito.cpp  compito.h
ExamTest/4_2023/: Exam3.cpp
ExamTest/4_2023/include/: compito.cpp  compito.h
ExamTest/4_2024/: Exam4.cpp
ExamTest/4_2024/include/: compito.cpp  compito.h
ExamTest/4_2025/: Exam4.cpp
ExamTest/4_2025/include/: compito.cpp  compito.h
ExamTest/6_2017/: Exam6.cpp
ExamTest/6_2017/include/: compito.cpp  compito.h
FdP/ExamTest/1_2022/include/: compito.cpp  compito.h
FdP/ExamTest/2_2026/: Exam2.cpp
FdP/ExamTest/2_2026/include/: compito.cpp  compito.h
FdP/ExamTest/4_2023/: Exam3.cpp
FdP/ExamTest/4_2023/include/: compito.cpp
FdP/ExamTest/4_2024/: Exam4.cpp
FdP/ExamTest/4_2024/include/: compito.cpp  compito.h
FdP/ExamTest/4_2025/: Exam4.cpp
FdP/ExamTest/4_2025/include/: compito.cpp
FdP/ExamTest/6_2017/: Exam6.cpp
FdP/ExamTest/6_2017/include/: compito.cpp  compito.h
FdP/Lab 10/Lab10 Include/: Cinema_class.cpp
FdP/Lab 11/: Palazzo 11.1.cpp
FdP/Lab 11/Soluzione Cristian/: Palazzo.cpp  Palazzo.h  main.cpp
FdP/Lab 12/Include/: compito.cpp  compito.h
FdP/Lab 3/: triplo.cpp
FdP/Lab 4/: Puntatori 1.cpp  Puntatori 3.cpp
FdP/Lab 6/: Ruota Vettore6.3.cpp  Somma pari di vettori 6.1.cpp  Stringa Palindroma 6.3.cpp
FdP/Lab 8/Cristian/: main.cpp
FdP/Lab 9/Lab9 Include/: class_iscrizione.cpp  class_iscrizione.h  iscrizione.cpp  iscrizione.h
FdP/Teoria/: Din_Memory.cpp  Funzioni ricorsive.cpp  Liste implementazione completa Cristian.cpp  Liste2.cpp  Matrici_Dinamiche.cpp  funzioni_inline.cpp  namespaces.cpp
FdP/Teoria/Classi/: Classe n complessi.cpp  Classe pila.cpp  Costanti e ref dentro classi.cpp  Costruttori di copia.cpp  Funzioni friend.cpp  Funzioni membro const.cpp  membri dato statici.cpp  ptr_this.cpp
FdP/Teoria/Ovverride operatori/: operatori di conversione.cpp  override op.cpp  ovverride ostream.cpp
FdP/Teoria/Unità di compilazione/: lib_vett.cpp  lib_vett.h
Lab 1/: main.cpp
Lab 10/: Cinema 10.1.cpp
Lab 10/Lab10 Include/: Cinema_class.cpp  Cinema_class.h
Lab 11/: Palazzo 11.1.cpp
Lab 11/Lab11 include/: palazzo_class.cpp  palazzo_class.h
Lab 11/Palazzo 2.0/: Palazzo 11.2.cpp
Lab 11/Palazzo 2.0/Include/: palazzo.cpp  palazzo.h
Lab 11/Soluzione Cristian/: Floor.cpp  Floor.h
Lab 12/: PuzzleBobble.cpp
Lab 12/Include/: compito.cpp  compito.h
Lab 3/: forme geometriche.cpp
Lab 4/: Funzione con valori di ritorno multipli.cpp  Puntatori 2.cpp  Riferimenti.cpp
Lab 7/: Somma diagonali 7.1.cpp
Lab 8/: Liste 8.2.cpp  Uso debuger 1 8.1.cpp
Lab 9/: Gestione iscrizione classe 9.1.cpp
Lab10/: Cinema 10.1.cpp
Lab2/: main.cpp
Lab3/: Lez 3 Maschere.cpp
Lab4/: Funzione con valori di ritorno multipli.cpp
Lab6/: Concatena vettori 6.2.cpp
Lab7/: Creazione vettore heap 7.2.cpp
Lab8/: Uso debuger 1 8.1.cpp
Lab9/: Gestione iscrizione classe 9.1.cpp  Gestione iscrizioni 9.1.cpp
Lab9/Lab9 Include/: class_iscrizione.cpp  iscrizione.cpp  iscrizione.h
Teoria/: Array_multidim.cpp  Liste implementazione completa Cristian.cpp  Liste.cpp  Liste2.cpp  Union.cpp  alg_ord.cpp  classi.cpp  lib_vett.cpp  main.cpp  pila.h
Teoria/Classi/: Classe n complessi.cpp  Classe pila.h  Costruttori.cpp
Teoria/Ovverride operatori/: Override op unari.cpp  override op.cpp
Teoria/Preprocessori/: preprocessore.cpp
Teoria/Unità di compilazione/: Unità di compilazione.cpp
VectorLib/: vettori.cpp  vettori.h
